Prevent wrapping in dialog buttons

--- a/index.css
+++ b/index.css
@@ -342,6 +342,9 @@ td, th {
 	right: 10px;
 	font-size: 40px;
 }
+.dialog-button {
+	white-space: nowrap;
+}
 .settings-grid {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
